tests/sksl/errors/Ossfuzz47935.glsl
### Compilation failed:

error: 1: variables of type 'void' are not allowed
void j = half[4](float[4](5,2,3,1));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 1: expected 'void', but found 'half[4]'
void j = half[4](float[4](5,2,3,1));
         ^^^^^^^^^^^^^^^^^^^^^^^^^^
2 errors
